Modernisation des appels à des anciennes méthodes & mise en static public de config